<resources>
    <string name="app_name">Dijkstra demo</string>
    <string name="newGraph">Új gráf</string>
    <string name="sureToDeleteGraph">Biztosan törölni szeretnéd a jelenlegi gráfot?</string>
    <string name="sureToDeleteEdge">Biztosan törölni szeretnéd ezt az élet?</string>
    <string name="sureToDeleteNode">Biztosan törölni szeretnéd ezt a csúcsot?</string>
    <string name="createNewGraph">Új gráf létrehozása</string>
    <string name="delete">Törlés</string>
    <string name="cancel">Mégse</string>
    <string name="firstCreateGraph">Először hozz létre egy gráfot!</string>
    <string name="noRoute">Nincs út</string>
    <string name="costIs">"A költség"</string>
    <string name="byRoute">ezen az útvonalon</string>
    <string name="node">Csúcs</string>
    <string name="edge">Él</string>
    <string name="set">Beállít</string>
    <string name="edit">Szerkesztés</string>
    <string name="setValue">Add meg az értéket</string>
    <string name="runDijkstra">Dijkstra futtatása</string>
    <string name="run">Futtatás</string>
    <string name="generateGraph">Gráf generálása</string>
    <string name="set_node_count">Csúcsok száma</string>
    <string name="set_edge_count">Élek száma</string>
    <string name="generate">Generálás</string>
    <string name="select_starting_node">Kezdő csúcs:</string>
    <string name="deleteGraph">Gráf törlése</string>
    <string name="deleteEdge">Él törlése</string>
    <string name="deleteNode">Csúcs törlése</string>
    <string name="addNode">Csúcs hozzáadása</string>
    <string name="addEdge">Él hozzáadása</string>
    <string name="options">Opciók</string>
    <string name="firstNode">Első csúcs</string>
    <string name="secondNode">Második csúcs</string>
    <string name="add">Hozzáadás</string>
    <string name="value">Érték</string>
    <string name="ok">Rendben</string>
    <string name="results">Eredmények</string>
    <string name="runFirst">Előbb futtasd le a Dijkstra algoritmust!</string>
    <string name="edgeAlready">Már van él a két csúcs között!</string>
    <string name="loopForbidden">A hurokélek nem megengedettek!</string>
</resources>