<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/edit"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginBottom="16dp"
        android:id="@+id/dialog_title"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/setValue"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:id="@+id/editText"
        android:gravity="center"
        android:textAlignment="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/set"
        android:textColor="@color/white"
        android:background="@color/purple_700"
        android:id="@+id/generate_btn"/>


    <Button
        android:id="@+id/delete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/red_500"
        android:text="@string/delete"
        android:textColor="@color/white"
        app:backgroundTint="@color/red_500" />
</LinearLayout>